update setup bash files and README

--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,8 @@ src_convonet/utils/libvoxelize/voxelize.cpython-39-x86_64-linux-gnu.so
 
 # compiled
 logs
+mcubes.cpp
+simplify_mesh.cpp
 
 # output
 *.ckpt
