finish load anchor npy file, which has been pre-processed and is different from source npy file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,22 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 find_package(Python COMPONENTS Interpreter Development)
 find_package(pybind11 CONFIG)
 
+find_package(ZLIB REQUIRED)
+include_directories(${ZLIB_INCLUDE_DIRS})
+
 include_directories(${PROJECT_NAME} PRIVATE)
 
 include_directories(./3rd/MarchingCubeCpp)
+include_directories(./3rd/cnpy)
 include_directories(./include)
 
 file(GLOB_RECURSE SRC ./src/*.cpp)
+set(CNPY_SRC ./3rd/cnpy/cnpy.cpp)
 
-add_executable(${PROJECT_NAME} ./src/main.cpp ${SRC})
+add_executable(${PROJECT_NAME} ./src/main.cpp ${SRC} ${CNPY_SRC})
 
 find_library(TORCH_PYTHON_LIBRARY torch_python PATH "${TORCH_INSTALL_PREFIX}/lib")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${TORCH_LIBRARIES} ${TORCH_PYTHON_LIBRARY})
 target_link_libraries(${PROJECT_NAME} PRIVATE pybind11::embed)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${ZLIB_LIBRARIES})
